--- a/codes/contact.html
+++ b/codes/contact.html
@@ -15,7 +15,7 @@
             <div id="logo">Tanmay Goyal</div>
 
             <ul id="navlinks">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="aboutme.html">About Me</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="project.html">Project</a></li>
