Updated About Me section and styles

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <link rel="stylesheet" href="css/home.css">
         <title>Tanmay Goyal</title>
     </head>
 
-    <body style="background-color: rgb(231, 231, 231); font-family: Arial, Helvetica, sans-serif;">
+    <body>
         <nav id="navbar">
 
             <div id="logo">Tanmay Goyal</div>
@@ -23,18 +22,16 @@
         <br>
         <br>
         
-        <img src="TANMAY_GOYAL.jpg" style="margin-left: auto; margin-right: auto; display: block; border: 3px solid white; border-radius: 100px;">
-        <h2 style="text-align: center; color: rgb(0, 0, 77); font-family: Arial, Helvetica, sans-serif; font-weight: 700;">
+        <img class="profile-img" src="TANMAY_GOYAL.jpg" alt="Tanmay Goyal">
+        <h2 class="h-name">
             TANMAY GOYAL
         </h2>
 
-        <h3 style="text-align:center">
+        <h3 class="h-sub">
             B.Tech Computer Science - Delhi Technological University (DTU) 
             <br>
             Alumnus – Amity International School
         </h3>
-
-        
 
     </body>
 </html>
