--- a/education.html
+++ b/education.html
@@ -22,9 +22,14 @@
             <li><a href="contact.html">Contact Me</a></li>
             </ul>
         </nav>
+        <h1 style="font-family: Arial, Helvetica, sans-serif; text-align: center;">
+            
+            Education
+            <hr>
+        </h1>
 
         <h1 style="text-align: center;">Performance in Class X CBSE Board Examinations</h1>
-        <table>
+        <table style="margin-left: 20px; margin-right: 50px; width: 97%; align-self: center;">
             <caption style="margin-bottom: 10px; font-weight: 700;">Marks Scorecard</caption>
             <thead>
                 <tr>
@@ -63,7 +68,7 @@
         </table>
 
         <h1 style="text-align: center;">Performance in Class XII CBSE Board Examinations</h1>
-        <table>
+        <table style="margin-left: 20px; margin-right: 50px; width: 97%; align-self: center;">
             <caption style="margin-bottom: 10px; font-weight: 700;">Marks Scorecard</caption>
             <thead>
                 <tr>
