--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,7 @@
             <hr>
         </h1>
         
-        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">
+        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif; margin-left: 20px; margin-right: 20px;">
             Hello, and welcome to my portfolio.
 
 <br>
